[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Scoreboard_Screen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Button_Mask.PNG" type="BitMap" id=2]
[ext_resource path="res://Presets/HoverButton.gd" type="Script" id=3]
[ext_resource path="res://Presets/Multiplayer/EndGameScreenMultiplayer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Quit_Button.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/LevelCompleted/Restart-Button.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Robfont-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 4
border_width_right = 2
border_width_bottom = 2

[node name="EndGameScreen" type="Node2D"]
z_index = 20
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.552941 )

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="WordsSpelled" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 249.0
margin_top = 486.0
margin_right = 1004.0
margin_bottom = 580.0
custom_fonts/normal_font = SubResource( 2 )
text = "Words Spelled: 0"
scroll_active = false

[node name="LevelStatus" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 249.0
margin_top = 385.0
margin_right = 1004.0
margin_bottom = 479.0
custom_colors/default_color = Color( 0.882353, 0.172549, 0.152941, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Level Passed!"
scroll_active = false

[node name="PointsEarned" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 248.0
margin_top = 594.0
margin_right = 1003.0
margin_bottom = 688.0
custom_fonts/normal_font = SubResource( 2 )
text = "Points Earned: 0"
scroll_active = false

[node name="WordsSpelledTitle" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 1088.0
margin_top = 361.0
margin_right = 1693.0
margin_bottom = 441.0
custom_fonts/normal_font = SubResource( 2 )
text = "Words Spelled"
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
margin_left = 1088.0
margin_top = 445.0
margin_right = 1679.0
margin_bottom = 799.0
mouse_filter = 2
custom_styles/bg = SubResource( 5 )

[node name="WordsSpelledContainer" type="VBoxContainer" parent="CanvasLayer/Control/ScrollContainer"]
margin_left = 2.0
margin_top = 4.0
margin_right = 589.0
margin_bottom = 352.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 254.0
margin_top = 672.0
margin_right = 404.0
margin_bottom = 822.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 5 )
texture_click_mask = ExtResource( 2 )
expand = true
script = ExtResource( 3 )

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 421.0
margin_top = 672.0
margin_right = 571.0
margin_bottom = 822.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
texture_click_mask = ExtResource( 2 )
expand = true
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
margin_left = 1051.0
margin_top = 451.0
margin_right = 1691.0
margin_bottom = 810.0

[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RestartButton" to="." method="_on_RestartButton_pressed"]
